[project]
name = "openapi-mcp"
version = "0.1.0"
description = "OpenAPI Navigator - MCP server for navigating OpenAPI specifications"
readme = "README.md"
authors = [{ name = "Mike Garuccio", email = "mike.garuccio@expedient.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.3",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "jsonschema>=4.20.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.23.0",
]

[project.scripts]
openapi-navigator = "openapi_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["black>=25.1.0", "ruff>=0.12.11"]
